--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Pagina Web 1</title>
     <link rel="stylesheet" href="./Style.css">
   </head>
   <body>
@@ -28,6 +28,7 @@
           <p>Ecuador</p>
           <p>Send E-mail</p>
         </section>
+
         <section class="info">
           <div class="">
             <h4>Seguidores</h4>
