--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina Web 1</title>
-    <link rel="stylesheet" href="./Style.css">
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <main>
